<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:background="@color/onboarding_background" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/onboarding_page_1" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="@dimen/onboarding_margin_sides" android:layout_marginRight="@dimen/onboarding_margin_sides" android:layout_marginBottom="@dimen/onboarding_margin_bottom">
        <TextView android:textSize="@dimen/text_size_onboarding_title" android:textColor="@android:color/white" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="120.0dip" android:text="@string/onboarding_page_1_title" />
        <TextView android:textSize="@dimen/text_size_onboarding_body" android:textColor="@android:color/white" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/onboarding_page_1_text" />
    </LinearLayout>
    <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/onboarding_page_2" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="@dimen/onboarding_margin_sides" android:layout_marginRight="@dimen/onboarding_margin_sides" android:layout_marginBottom="@dimen/onboarding_margin_bottom">
        <ImageView android:layout_width="fill_parent" android:layout_height="@dimen/onboarding_image_height" android:layout_marginBottom="24.0dip" android:src="@drawable/onboarding_2" android:scaleType="fitCenter" />
        <TextView android:textSize="@dimen/text_size_onboarding_body" android:textColor="@android:color/white" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/onboarding_page_2_text" />
    </LinearLayout>
    <Button android:textColor="@color/onboarding_background" android:layout_gravity="bottom|center|right" android:id="@id/onboarding_advance_button" android:background="@android:color/white" android:padding="8.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="16.0dip" android:text="@string/onboarding_next" />
</FrameLayout>