<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:background="@color/main_background" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <Button android:layout_gravity="center|right|top" android:id="@id/overflow_button" android:background="@drawable/overflow_button_background" android:layout_width="48.0dip" android:layout_height="48.0dip" android:layout_marginTop="16.0dip" android:layout_marginRight="16.0dip" />
    <TextView android:textStyle="bold" android:textColor="@android:color/white" android:layout_gravity="center|top" android:id="@id/status_text" android:background="@drawable/disconnected_status_background" android:padding="4.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" />
    <TextView android:textColor="@color/dim_text_color" android:layout_gravity="center|top" android:id="@id/local_ip_address_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="48.0dip" />
    <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/emulated_controller_ui" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <LinearLayout android:gravity="center" android:layout_gravity="center" android:orientation="vertical" android:id="@id/controller_view" android:background="@drawable/controller_outline" android:layout_width="@dimen/controller_outline_default_width" android:layout_height="@dimen/controller_outline_default_height">
            <com.google.vr.inputcompanion.TouchpadView android:id="@id/touchpad_view" android:background="@drawable/touchpad" android:layout_width="@dimen/touchpad_default_size" android:layout_height="@dimen/touchpad_default_size" android:layout_marginBottom="@dimen/touchpad_default_margin_bottom" />
            <Button android:id="@id/app_button" android:background="@drawable/app_button_background" android:layout_width="@dimen/button_default_size" android:layout_height="@dimen/button_default_size" android:layout_marginBottom="@dimen/app_button_default_margin_bottom" />
            <Button android:id="@id/home_button" android:background="@drawable/home_button_background" android:layout_width="@dimen/button_default_size" android:layout_height="@dimen/button_default_size" />
        </LinearLayout>
    </LinearLayout>
    <TextView android:textColor="@color/important_text_color" android:layout_gravity="bottom|center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="32.0dip" android:text="@string/click_button_hint" />
    <TextView android:textColor="@color/dim_text_color" android:layout_gravity="bottom|center" android:id="@id/ic_version" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="8.0dip" />
    <LinearLayout android:orientation="vertical" android:padding="8.0dip" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent"
      xmlns:android="http://schemas.android.com/apk/res/android">
        <FrameLayout android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0" />
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" />
    </LinearLayout>
    <FrameLayout android:id="@id/adjust_size_overlay" android:background="@color/adjust_size_background_color" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <LinearLayout android:gravity="center" android:layout_gravity="top" android:orientation="horizontal" android:background="@color/colorPrimary" android:layout_width="fill_parent" android:layout_height="64.0dip">
            <ImageButton android:textColor="@android:color/white" android:id="@id/adjust_size_minus" android:background="@drawable/flat_button_background" android:layout_width="64.0dip" android:layout_height="64.0dip" android:src="@mipmap/ic_minus" />
            <TextView android:textColor="@android:color/white" android:gravity="center" android:id="@id/adjust_size_current_scale" android:layout_width="150.0dip" android:layout_height="wrap_content" />
            <ImageButton android:textColor="@android:color/white" android:id="@id/adjust_size_plus" android:background="@drawable/flat_button_background" android:layout_width="64.0dip" android:layout_height="64.0dip" android:src="@mipmap/ic_plus" />
        </LinearLayout>
        <LinearLayout android:gravity="center" android:layout_gravity="bottom" android:orientation="horizontal" android:background="@color/colorPrimary" android:layout_width="fill_parent" android:layout_height="64.0dip">
            <Button android:textColor="@android:color/white" android:id="@id/adjust_size_cancel" android:background="@drawable/flat_button_background" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/cancel" android:layout_weight="1.0" />
            <View android:background="#30000000" android:layout_width="1.0dip" android:layout_height="fill_parent" android:layout_margin="8.0dip" />
            <Button android:textColor="@android:color/white" android:id="@id/adjust_size_ok" android:background="@drawable/flat_button_background" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/done" android:layout_weight="1.0" />
        </LinearLayout>
    </FrameLayout>
    <FrameLayout android:layout_gravity="center" android:id="@id/real_controller_ui" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <FrameLayout android:background="@android:color/black" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <ImageView android:layout_gravity="center|top" android:id="@id/gvr_controller_state_graphic" android:layout_width="300.0dip" android:layout_height="200.0dip" android:layout_marginTop="32.0dip" />
            <TextView android:textSize="16.0sp" android:textColor="#ffffffff" android:layout_gravity="center" android:id="@id/gvr_controller_status" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="32.0dip" android:layout_marginRight="32.0dip" />
            <Button android:layout_gravity="bottom|center" android:id="@id/end_real_controller_mode" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="16.0dip" android:text="@string/end_real_controller_mode" />
        </FrameLayout>
    </FrameLayout>
</FrameLayout>